tests/transpiler/x/java/count_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(count(new int[]{1, 2, 3}));
                           ^
  symbol:   method count(int[])
  location: class Main
1 error
