tests/transpiler/x/java/count_builtin.java
public class Main {

    public static void main(String[] args) {
        System.out.println(count(new int[]{1, 2, 3}));
    }
}
